# euclidean-norm

./: .gitignore  LICENSE  convert_marimo_to_ipynb.py  main.py  mkdocs.yml  pyproject.toml  update_mkdocs_and_cleanup.py
.github/workflows/: deploy.yml
docs/: about-me.md  index.md  requirements.txt
docs/python_fundamental_course/modules/module_01/: 01_tokens_and_basics.py
docs/python_fundamental_course/modules/module_01/__marimo__/: 01_tokens_and_basics.html  01_tokens_and_basics.ipynb
docs/python_fundamental_course/modules/module_01/__marimo__/session/: 01_tokens_and_basics.py.json
site/: 404.html  index.html
site/about-me/: index.html
site/python_fundamental_course/modules/module_01/: 01_Basic.py  02_Basic.py
