[project]
name = "euclidean-norm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-marimo>=0.2.1",
    "mkdocs-rtd-dropdown>=1.0.2",
    "mkdocstrings[python]>=1.0.0",
    "nbformat>=5.10.4",
    "pymdown-extensions>=10.20",
]
license = {text = "CC-BY-4.0"}
